# IP-Blocker

./: .gitignore  README.md  local.properties
.github/workflows/: gradle.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cxx
app/src/main/cpp/src/tunmode/: tunmode.cxx
app/src/main/java/com/matthew/ipblocker/: TunModeApp.java
app/src/main/java/com/matthew/ipblocker/interceptor/activities/: MainActivity.java
app/src/main/java/com/matthew/ipblocker/interceptor/services/: TunModeService.java
app/src/main/java/git/gxosty/tunmode/interceptor/activities/: MainActivity.java
app/src/main/java/git/gxosty/tunmode/interceptor/services/: TunModeService.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
